// Vitest Snapshot v1

exports[`Radio > Radio baseVue demo works fine 1`] = `
<div>
  <div
    class="t-radio-group radio-group-demo"
    role="radiogroup"
  >
    <!--v-if-->
    
    <div
      class="t-radio t-radio--right t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="1"
      />
      <div
        class="t-radio__icon t-radio__icon--right"
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-radio__icon-circle"
        />
        <!--v-if-->
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!--v-if-->
      </div>
      <div
        class="t-radio__border t-radio__border--right"
      />
    </div>
    <div
      class="t-radio t-radio--right t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="2"
      />
      <div
        class="t-radio__icon t-radio__icon--right"
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-radio__icon-circle"
        />
        <!--v-if-->
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!--v-if-->
      </div>
      <div
        class="t-radio__border t-radio__border--right"
      />
    </div>
    <div
      class="t-radio t-radio--right t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="3"
      />
      <div
        class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选
        </span>
        <!--v-if-->
      </div>
      <div
        class="t-radio__border t-radio__border--right"
      />
    </div>
    <div
      class="t-radio t-radio--right t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="4"
      />
      <div
        class="t-radio__icon t-radio__icon--right"
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-radio__icon-circle"
        />
        <!--v-if-->
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <div
          class="t-radio__description"
          style=""
        >
          描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息
        </div>
      </div>
      <div
        class="t-radio__border t-radio__border--right"
      />
    </div>
    
  </div>
</div>
`;

exports[`Radio > Radio cardVue demo works fine 1`] = `
<div>
  <div
    class="t-radio-group theme-card"
    role="radiogroup"
  >
    <!--v-if-->
    
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="1"
      />
      <div
        class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!--v-if-->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="2"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-radio__icon-circle"
        />
        <!--v-if-->
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!--v-if-->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="4"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-radio__icon-circle"
        />
        <!--v-if-->
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选标题多行单选标题多行单选标题多行单选标题多行单选标题多行
        </span>
        <!--v-if-->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    
  </div>
</div>
`;

exports[`Radio > Radio customVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio-group"
    data-v-5173b2c6=""
    role="radiogroup"
  >
    <!--v-if-->
    
    
    <view
      class="card card--active"
      data-v-5173b2c6=""
    >
      <svg
        class="t-icon t-icon-check card__icon"
        data-v-5173b2c6=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="0"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!--v-if-->
      </div>
    </view>
    <view
      class="card"
      data-v-5173b2c6=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!--v-if-->
      </div>
    </view>
    <view
      class="card"
      data-v-5173b2c6=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="2"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!--v-if-->
      </div>
    </view>
    
    
  </div>
  <view
    class="demo-desc"
    data-v-5173b2c6=""
  >
    横向卡片单选框
  </view>
  <div
    class="t-radio-group horizontal-box"
    data-v-5173b2c6=""
    role="radiogroup"
  >
    <!--v-if-->
    
    
    <view
      class="card card--active"
      data-v-5173b2c6=""
    >
      <svg
        class="t-icon t-icon-check card__icon"
        data-v-5173b2c6=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="0"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </view>
    <view
      class="card"
      data-v-5173b2c6=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </view>
    <view
      class="card"
      data-v-5173b2c6=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="2"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </view>
    
    
  </div>
  
</div>
`;

exports[`Radio > Radio horizontalVue demo works fine 1`] = `
<div
  class="t-radio-group box"
  role="radiogroup"
>
  <!--v-if-->
  
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="t-radio__icon t-radio__icon--left"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div
        class="t-radio__icon-circle"
      />
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="t-radio__icon t-radio__icon--left"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div
        class="t-radio__icon-circle"
      />
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="3"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`Radio > Radio iconVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio t-radio--undefined t-radio--block block"
    data-v-9c2f6eb6=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--undefined t-radio__icon--checked"
    >
      <!--v-if-->
      <svg
        class="t-icon t-icon-check t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!--v-if-->
    </div>
    <div
      class="t-radio__border t-radio__border--undefined"
    />
  </div>
  <div
    class="t-radio t-radio--undefined t-radio--block block"
    data-v-9c2f6eb6=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--undefined t-radio__icon--checked"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="t-radio__icon-dot"
      />
      <!--v-if-->
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!--v-if-->
    </div>
    <div
      class="t-radio__border t-radio__border--undefined"
    />
  </div>
  
</div>
`;

exports[`Radio > Radio mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Radio 单选框
  </h1>
  <p
    class="summary"
  >
    用于在预设的一组选项中执行单项选择，并呈现选择结果。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纵向单选框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="t-radio-group radio-group-demo"
          role="radiogroup"
        >
          <!--v-if-->
          
          <div
            class="t-radio t-radio--right t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--right"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <div
                class="t-radio__icon-circle"
              />
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--right"
            />
          </div>
          <div
            class="t-radio t-radio--right t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--right"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <div
                class="t-radio__icon-circle"
              />
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--right"
            />
          </div>
          <div
            class="t-radio t-radio--right t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="3"
            />
            <div
              class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--right"
            />
          </div>
          <div
            class="t-radio t-radio--right t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="4"
            />
            <div
              class="t-radio__icon t-radio__icon--right"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <div
                class="t-radio__icon-circle"
              />
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <div
              class="t-radio__border t-radio__border--right"
            />
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        横向单选框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-radio-group box"
        role="radiogroup"
      >
        <!--v-if-->
        
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="1"
          />
          <div
            class="t-radio__icon t-radio__icon--left"
          >
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-radio__icon-circle"
            />
            <!--v-if-->
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="2"
          />
          <div
            class="t-radio__icon t-radio__icon--left"
          >
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-radio__icon-circle"
            />
            <!--v-if-->
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="3"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
          >
            <svg
              class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选框禁用态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-radio-group radio-group-demo space"
        data-v-4455429e=""
        role="radiogroup"
      >
        
        <div
          class="t-radio t-radio--left t-radio--block"
        >
          <input
            class="t-radio__original"
            disabled=""
            name=""
            type="radio"
            value="1"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--checked t-radio__icon--disabled"
          >
            <svg
              class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title t-radio__title--disabled"
              style=""
            >
              选项禁用-已选
            </span>
            <!--v-if-->
          </div>
          <div
            class="t-radio__border t-radio__border--left"
          />
        </div>
        <div
          class="t-radio t-radio--left t-radio--block"
        >
          <input
            class="t-radio__original"
            disabled=""
            name=""
            type="radio"
            value="2"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
          >
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-radio__icon-circle t-radio__icon-circle--disabled"
            />
            <!--v-if-->
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title t-radio__title--disabled"
              style=""
            >
              选项禁用-默认
            </span>
            <!--v-if-->
          </div>
          <div
            class="t-radio__border t-radio__border--left"
          />
        </div>
        
        <!--v-if-->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        勾选样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio t-radio--undefined t-radio--block block"
        data-v-9c2f6eb6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--undefined t-radio__icon--checked"
        >
          <!--v-if-->
          <svg
            class="t-icon t-icon-check t-radio__icon-wrap"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!--v-if-->
        </div>
        <div
          class="t-radio__border t-radio__border--undefined"
        />
      </div>
      <div
        class="t-radio t-radio--undefined t-radio--block block"
        data-v-9c2f6eb6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--undefined t-radio__icon--checked"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="t-radio__icon-dot"
          />
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!--v-if-->
        </div>
        <div
          class="t-radio__border t-radio__border--undefined"
        />
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        勾选显示位置
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio t-radio--undefined t-radio--block block"
        data-v-57f93969=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--undefined t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!--v-if-->
        </div>
        <div
          class="t-radio__border t-radio__border--undefined"
        />
      </div>
      <div
        class="t-radio t-radio--right t-radio--block block"
        data-v-57f93969=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!--v-if-->
        </div>
        <div
          class="t-radio__border t-radio__border--right"
        />
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        非通栏单选样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="t-radio-group theme-card"
          role="radiogroup"
        >
          <!--v-if-->
          
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <div
                class="t-radio__icon-circle"
              />
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="4"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <div
                class="t-radio__icon-circle"
              />
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选标题多行单选标题多行单选标题多行单选标题多行单选标题多行
              </span>
              <!--v-if-->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        04 特殊样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选框尺寸规格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio-group"
        data-v-5173b2c6=""
        role="radiogroup"
      >
        <!--v-if-->
        
        
        <view
          class="card card--active"
          data-v-5173b2c6=""
        >
          <svg
            class="t-icon t-icon-check card__icon"
            data-v-5173b2c6=""
          >
            <use
              href="#t-icon-check"
            />
          </svg>
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="0"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!--v-if-->
          </div>
        </view>
        <view
          class="card"
          data-v-5173b2c6=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!--v-if-->
          </div>
        </view>
        <view
          class="card"
          data-v-5173b2c6=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!--v-if-->
          </div>
        </view>
        
        
      </div>
      <view
        class="demo-desc"
        data-v-5173b2c6=""
      >
        横向卡片单选框
      </view>
      <div
        class="t-radio-group horizontal-box"
        data-v-5173b2c6=""
        role="radiogroup"
      >
        <!--v-if-->
        
        
        <view
          class="card card--active"
          data-v-5173b2c6=""
        >
          <svg
            class="t-icon t-icon-check card__icon"
            data-v-5173b2c6=""
          >
            <use
              href="#t-icon-check"
            />
          </svg>
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="0"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </view>
        <view
          class="card"
          data-v-5173b2c6=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </view>
        <view
          class="card"
          data-v-5173b2c6=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </view>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Radio > Radio placementVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio t-radio--undefined t-radio--block block"
    data-v-57f93969=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--undefined t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!--v-if-->
    </div>
    <div
      class="t-radio__border t-radio__border--undefined"
    />
  </div>
  <div
    class="t-radio t-radio--right t-radio--block block"
    data-v-57f93969=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!--v-if-->
    </div>
    <div
      class="t-radio__border t-radio__border--right"
    />
  </div>
  
</div>
`;

exports[`Radio > Radio statusVue demo works fine 1`] = `
<div
  class="t-radio-group radio-group-demo space"
  data-v-4455429e=""
  role="radiogroup"
>
  
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      disabled=""
      name=""
      type="radio"
      value="1"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked t-radio__icon--disabled"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title t-radio__title--disabled"
        style=""
      >
        选项禁用-已选
      </span>
      <!--v-if-->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      disabled=""
      name=""
      type="radio"
      value="2"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
    >
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div
        class="t-radio__icon-circle t-radio__icon-circle--disabled"
      />
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title t-radio__title--disabled"
        style=""
      >
        选项禁用-默认
      </span>
      <!--v-if-->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  
  <!--v-if-->
</div>
`;
